# DexAnalitics

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  Cargo.toml  README.md  STARTUP.md
.cargo/: config.toml
Docker/: README.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  events.rs  lib.rs  main.rs  models.rs  openapi.rs  prelude.rs  routes.rs  state.rs  websocket.rs
crates/api/src/handlers/: devnet_e2e_tests.rs  endpoint_coverage_tests.rs  health.rs  mod.rs  orca.rs  orca_tests.rs  phantom_auth.rs  phantom_auth_tests.rs  pools.rs  pools_tests.rs  positions.rs  strategies.rs  tx.rs  tx_tests.rs
crates/api/src/services/: mod.rs  optimization_runner.rs  orca_read_service.rs  orca_tx_service.rs  position_service.rs  strategy_service.rs
doc/: AI_STREAM_AGENT.md  AI_STUDIO_NOTATKA_2026-03-26.txt  ASYNC_COMMUNICATION_LAYER.md  BACKTEST_OPTIMIZE_STRATEGIES.md  BACKTEST_OPTIMIZE_WHETH_SOL_24_48_72_FEES.md  BOT_HYBRID_ARCHITECTURE_CONTRACT_2026-03-23.md  BOT_HYBRID_DEFINITION_OF_READY_2026-03-23.md  BOT_OPERATIONS_MODEL_2026-03-23.md  BOT_RESEARCH_DECISION_2026-03-23.md  BOT_WORKLOG_2026-03-23.md  DEVNET_BOT_PRODUCTION_READINESS.md  DEVNET_WALLET_BOT_LAUNCH_RUNBOOK_V1.md  ENGINEERING_NOTES.md  FEES_DATA_PLAN.md  METEORA_DLMM_SWAP_EVENT.md  ONCHAIN_FEES_PROGRESS.md  ONCHAIN_FEES_TRUTH_PLAN.md  ORCA_API_SERVICE_CONTRACT.md  ORCA_EXTERNAL_IMPLEMENTATIONS.md  ORCA_FEES_DATA_PLAN.md  ORCA_RUNBOOK.md  PROJECT_OVERVIEW.md  README.md  RPC_SOLANA_BOT_NOTES.md  SNAPSHOT_ISSUES_PLAYBOOK.md  SOLANA_INDEXING.md  TODO_CHART_AGENT_LAYER.md  TODO_ONCHAIN_NEXT_STEPS.md
tools/: bot_postrun_report.ps1  bot_preflight.ps1  bot_run_devnet.ps1  bot_session_devnet.ps1  devnet_rebalance_wallet_half.ps1  quick_verify_data.ps1  (+1 more)
web/: README.md  (+3 more)
(+89 files in other folders)
