[package]
name = "clmm-lp-api"
version = "0.1.1-alpha.3"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[[bin]]
name = "clmm-lp-api"
path = "src/main.rs"

[lib]
name = "clmm_lp_api"
path = "src/lib.rs"

[features]
default = []
broker-event-bus = []

[dependencies]
clmm-lp-domain = { workspace = true }
clmm-lp-execution = { workspace = true }
clmm-lp-protocols = { workspace = true }
clmm-lp-data = { workspace = true }
clmm-lp-simulation = { workspace = true }
clmm-lp-optimization = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "timeout", "limit"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = "1.3"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
orca_whirlpools = "7.0.2"

[dev-dependencies]
httpmock = "0.8.3"
